<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:text="@string/button_1_pod"
        android:id="@+id/button_1_p1"
        android:tag="@string/button_1_p1_tag"
        android:textStyle="bold"
        app:layout_row="0"
        app:layout_column="0"
        app:layout_gravity="fill_horizontal"
        app:layout_columnWeight="1"/>

    <Button
        android:text="@string/button_2_pod"
        android:id="@+id/button_2_p1"
        android:tag="@string/button_2_p1_tag"
        android:textStyle="bold"
        app:layout_column="0"
        app:layout_row="1"
        app:layout_gravity="fill_horizontal"
        app:layout_columnWeight="1"/>

    <Button
        android:text="@string/button_3_pod"
        android:id="@+id/button_3_p1"
        android:tag="@string/button_3_p1_tag"
        android:textStyle="bold"
        app:layout_row="2"
        app:layout_column="0"
        app:layout_gravity="fill_horizontal"
        app:layout_columnWeight="1"/>

    <Button
        android:text="@string/button_2b_pod"
        android:id="@+id/button_2b_p1"
        android:tag="@string/button_2b_p1_tag"
        android:textStyle="bold"
        app:layout_column="1"
        app:layout_row="1"
        app:layout_gravity="fill_horizontal"
        app:layout_columnWeight="1"/>
    <Spinner
        android:id="@+id/spinner_1_p1"
        android:entries="@array/spinner_1_entries"
        android:background="@android:drawable/btn_dropdown"
        android:popupBackground="@android:drawable/btn_default_small"
        android:tag="@string/spinner_1_p1_tag"
        android:spinnerMode="dialog"
        style="@android:style/Widget.Spinner.DropDown"
        app:layout_row="0"
        app:layout_column="2"
        app:layout_gravity="fill_horizontal"
        app:layout_columnWeight="4"
        android:layout_width="75dp" />

    <Button
        android:text="@string/button_1b_pod"
        android:id="@+id/button_1b_p1"
        android:tag="@string/button_1b_p1_tag"
        android:textStyle="bold"
        app:layout_column="1"
        app:layout_row="0"
        app:layout_gravity="fill_horizontal"
        app:layout_columnWeight="1" />

</merge>