<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_base_url"
        android:inputType="textCapWords"
        android:key="base_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_base_url" />

    <ListPreference
        android:key="protocol"
        android:defaultValue="REST"
        android:entries="@array/pref_protocol_labels"
        android:entryValues="@array/pref_protocols"
        android:title="@string/pref_title_protocol"
        android:summary="%s" />

</PreferenceScreen>
